--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-recaptcha-google": "^1.1.1",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
