--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.0.1",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
@@ -22,6 +24,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "typeface-domine": "^1.1.13",
     "typeface-oswald": "^1.1.13",
     "web-vitals": "^1.1.2"
