--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "typeface-domine": "^1.1.13",
     "typeface-oswald": "^1.1.13",
     "web-vitals": "^1.1.2"
