--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fullstory/browser": "^1.4.9",
     "@emotion/styled": "^11.11.0",
+    "@fullstory/browser": "^1.4.9",
     "@mui/icons-material": "^5.14.6",
     "@mui/joy": "^5.0.0-beta.3",
     "@mui/material": "^5.14.6",
     "@mui/styles": "^5.14.6",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +18,7 @@
     "bootstrap": "^5.0.1",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
+    "pdfjs-dist": "^3.4.120",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-device-detect": "^1.17.0",
@@ -23,6 +26,7 @@
     "react-error-overlay": "6.0.9",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
+    "react-pdf": "^7.6.0",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
