--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "bootstrap": "^5.0.1",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
-    "pdfjs-dist": "^3.4.120",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-device-detect": "^1.17.0",
@@ -24,6 +23,7 @@
     "react-error-overlay": "6.0.9",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
+    "react-pdf": "^7.6.0",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
